[project]
name = "ehr-extractors"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faiss-cpu>=1.10.0",
    "gradio>=5.24.0",
    "huggingface-hub[cli]>=0.30.2",
    "langchain>=0.3.23",
    "langchain-community>=0.3.21",
    "langchain-huggingface>=0.1.2",
    "openai>=1.72.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
]
